# service/src/main/java/dk/kvalitetsit/hjemmebehandling/controller/PatientController.java
@@ -1,32 +1,26 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
 import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
+import dk.kvalitetsit.hjemmebehandling.context.UserContextProvider;
 import dk.kvalitetsit.hjemmebehandling.service.PatientService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.openapitools.api.PatientApi;
 import org.openapitools.model.PatientDto;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
-
-import dk.kvalitetsit.hjemmebehandling.context.UserContextProvider;
-import io.swagger.v3.oas.annotations.tags.Tag;
-
 @RestController
-@Tag(name = "Patient", description = "API for retrieving information about the patient.")
 public class PatientController extends BaseController implements PatientApi {
-    private static final Logger logger = LoggerFactory.getLogger(UserController.class);
+    private static final Logger logger = LoggerFactory.getLogger(PatientController.class);
 
     private final UserContextProvider userContextProvider;
 
     private final PatientService patientService;
     private final DtoMapper dtoMapper;
+
     public PatientController(UserContextProvider userContextProvider, PatientService patientService, DtoMapper dtoMapper) {
         this.userContextProvider = userContextProvider;
         this.patientService = patientService;
@@ -41,7 +35,7 @@ public class PatientController extends BaseController implements PatientApi {
         try {
             // TODO: handle 'Optional.get()' without 'isPresent()' check
             return ResponseEntity.ok(dtoMapper.mapPatientModel(patientService.getPatient(cpr.get())));
-        } catch(ServiceException e) {
+        } catch (ServiceException e) {
             logger.error("Could not retrieve patient", e);
             throw toStatusCodeException(e);
         }
